examples/test/testpolicy6204.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6204
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key15: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value44
      podSelector:
        matchLabels:
          key21: value40
          key44: value21
          key26: value45
